clusters/arcanis/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
