clusters/arcanis/homepage/middleware-acme.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: acme-challenge
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/.well-known/acme-challenge`)
      kind: Rule
      priority: 999
      services:
        - kind: TraefikService
          name: noop@internal
